--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body::after {
     text-align: center;
     width: 90%;
     max-width: 650px;
+    margin: auto 20px;
     transition: background 0.3s, color 0.3s;
 }
 
@@ -83,8 +84,8 @@ button {
 /* Dark Mode Button */
 #dark-mode-btn {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 10px;
+    right: 10px;
     background: none;
     border: none;
     font-size: 36px;
